modules/source/services/cluster/vpc.tf
resource "aws_vpc" "common" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags {
    label = "blog"
  }
}
